added docs for auth handlers
