# cmd/api/main.go
@@ -20,8 +20,12 @@ import (
 // @title           KVault API
 // @version         1.0
 // @description     REST API for managing and searching notes and documents
-// @host            localhost:6767
+// @host            172.21.37.79:6767
 // @BasePath        /api/v1
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
 	config, err := config.LoadConfig()
 	if err != nil {
