# internal/handlers/auth_handler.go
@@ -27,13 +27,13 @@ type AuthHandler struct {
 }
 
 type registerUserRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
+	Email    string `json:"email" binding:"required,email" example:"example@mail.com"`
+	Password string `json:"password" binding:"required,min=8" example:"#strongPwd?123."`
 }
 
 type authenticateUserRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required"`
+	Email    string `json:"email" binding:"required,email" example:"example@mail.com"`
+	Password string `json:"password" binding:"required" example:"#strongPwd?123."`
 }
 
 func NewAuthHandler(authService AuthService, userService AuthUserService) *AuthHandler {
@@ -43,6 +43,17 @@ func NewAuthHandler(authService AuthService, userService AuthUserService) *AuthH
 	}
 }
 
+// @Summary      User registration
+// @Description  Creates a user record in database with given credentials
+// @Description  and returns user's information
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Param        body body registerUserRequest true "User credentials"
+// @Success      201   {object}  UserResponse
+// @Failure      422   {object}  httpx.ErrorResponse "Validation Error"
+// @Failure      500   {object}  httpx.ErrorResponse
+// @Router       /auth/register [post]
 func (h *AuthHandler) RegisterUser(ctx *gin.Context) {
 	var req registerUserRequest
 	if err := ctx.ShouldBindBodyWithJSON(&req); err != nil {
@@ -62,6 +73,17 @@ func (h *AuthHandler) RegisterUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, toUserResponseWithApiKey(user))
 }
 
+// @Summary      User authentication
+// @Description  Verifies user credentials
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Param        body body authenticateUserRequest true "User credentials"
+// @Success      200   {object}  UserResponse
+// @Failure      422   {object}  httpx.ErrorResponse "Validation Error"
+// @Failure      401   {object}  httpx.ErrorResponse
+// @Failure      500   {object}  httpx.ErrorResponse
+// @Router       /auth/login [post]
 func (h *AuthHandler) AuthenticateUser(ctx *gin.Context) {
 	var req authenticateUserRequest
 	if err := ctx.ShouldBindBodyWithJSON(&req); err != nil {
@@ -78,6 +100,14 @@ func (h *AuthHandler) AuthenticateUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, toUserResponseWithApiKey(user))
 }
 
+// @Summary      Get user data
+// @Description  Returns authenticated user
+// @Tags         Authentication
+// @Security     ApiKeyAuth
+// @Produce      json
+// @Success      200   {object}  UserResponse
+// @Failure      500   {object}  httpx.ErrorResponse
+// @Router       /auth/me [get]
 func (h *AuthHandler) GetAuthenticatedUser(ctx *gin.Context) {
 	userID := ctx.MustGet("userID").(string)
 
@@ -90,6 +120,14 @@ func (h *AuthHandler) GetAuthenticatedUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, toUserResponseWithApiKey(user))
 }
 
+// @Summary      Refresh API key
+// @Description  Refreshes authenticated user's API key
+// @Tags         Authentication
+// @Security     ApiKeyAuth
+// @Produce      json
+// @Success      200   {object}  UserResponse
+// @Failure      500   {object}  httpx.ErrorResponse
+// @Router       /auth/refresh [post]
 func (h *AuthHandler) RotateApiKey(ctx *gin.Context) {
 	userID := ctx.MustGet("userID").(string)
 
